# grain-nutrient-ingest

./: env.example  pyproject.toml  requirements.txt  table_db.ipynb
grain_nutri_ingest/: .gitignore  README.md  table_db.ipynb
grain_nutri_ingest/src/nutri_pipeline/: cli.py  config.py  db.py  graph.py  models.py  nutrient_extractor.py
grain_nutri_ingest/src/nutri_pipeline.egg-info/: SOURCES.txt  entry_points.txt
src/nutri_pipeline/: __init__.py  config.py  paper_search.py  pipeline.py  survey_options.py
src/nutri_pipeline.egg-info/: PKG-INFO  requires.txt  top_level.txt
