[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nutri-pipeline"
version = "0.1.0"
description = "논문 영양소 추출 파이프라인 (LangChain v1 + LangGraph v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.1.0",
    "langchain-core>=0.1.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.25.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nutri-pipeline = "nutri_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

